@@ -187,6 +187,7 @@ def build(bld):
         'model/hash-murmur3.cc',
         'model/hash-fnv.cc',
         'model/hash.cc',
+        'model/des-metrics.cc',
         ]
 
     core_test = bld.create_ns3_module_test_library('core')
@@ -299,6 +300,7 @@ def build(bld):
         'model/valgrind.h',
         'model/non-copyable.h',
         'model/build-profile.h',
+        'model/des-metrics.h',
         ]
 
     if sys.platform == 'win32':
